Add tomee maven plugin