@@ -34,5 +34,24 @@
         <module>starter-core</module>
     </modules>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.tomee.maven</groupId>
+                <artifactId>tomee-maven-plugin</artifactId>
+                <version>8.0.1</version>
+                <configuration>
+                    <tomeeClassifier>plus</tomeeClassifier>
+                    <args>-Xmx512m -XX:PermSize=256m</args>
+                    <webapps>
+                        <webapp>org.eclipse:starter-api:1.0-SNAPSHOT</webapp>
+                        <webapp>org.eclipse:starter-frontend:1.0-SNAPSHOT</webapp>
+                    </webapps>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+
 
 </project>
